--- a/MessengerShortcut/app/src/main/res/values/strings.xml
+++ b/MessengerShortcut/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">Launcher Shortcut</string>
+    <string name="app_name">Messenger Shortcut</string>
 </resources>
